ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-backend-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:324547056370:certificate/6a1a0fc9-de7f-41a0-a7d5-1a734dc5d24f
    alb.ingress.kubernetes.io/healthcheck-path: /library/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/group.name: one-api-alb
spec:
  ingressClassName: alb
  rules:
  - host: api.aws11.shop
    http:
      paths:
      - path: /library
        pathType: Prefix
        backend:
          service:
            name: library-backend-service
            port:
              number: 8000
